--- a/index.html
+++ b/index.html
@@ -3,30 +3,36 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <d1 id="home">
-    <ul class="menu">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#favorite_books">Favorite Books</a></li>
-        <li><a href="#my_inspiration">Inspirations</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-    <title>My Favourite!</title>
-    <img src="IMG-3022.jpeg">
-    <span>
-        <h1>Reading Books</h1>
+        <ul class="menu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#benefit">Benefits Of Reading</a></li>
+            <li><a href="#why">Why People Like Reading So Much</a></li>
+            <li><a href="#favorite_books">Favorite Books</a></li>
+            <li><a href="#my_inspiration">Inspirations</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <title>My Favourite!</title>
+        <img src="IMG-3022.jpeg">
+        <span>
+            <h1>Reading Books</h1>
 
-        <h2>My Favorite Hobby!</h2>
-    </span>
+            <h2>My Favorite Hobby!</h2>
+        </span>
 
-</d1>
+    </d1>
 </head>
 
 <body>
     <p id="about">About</p><br />
 
-    <p1><center>
-        I love reading books, anybook at all, even if the only book I have in hand is my <p11>school book!!</p11> I find it fun, because all authors have different ways of telling the stories, and I love that! I love how whatever author narrates, it keeps us on the edge, waiting for us to know more, and slowly before you even realize it, you’re completely drawn to the book, forgetting all your problems, because right now, you just want to know what happens next. There are so many different genres to books, and there’s always a perfect one to get lost in. The plot twists, page-turners, the back story, the style, the beginning, middle, the end, the plot, it’s all for us to get hooked on! It’s not just stories; it’s a part of life! Just think of this; sitting on a comfortable chair, the sun is shining on you, but just the right amount for light, you’re outside, in a balcony, and a small breeze touches your face, and it makes the temperature just the right amount. You open the book, you read the first page, and you need to know more, and go on, finishing a few chapters, still sitting without a care in the world, and you feel like time is standing still, still for you finish that book. But time is moving, moving as each page you flip. And you can see what the author is trying to tell you, and you’re there, just as a bystander. You travel to the places where the main character goes seeing the supporting characters, trying to qualify them as villains or friends. In the end, when you close the book, the only thing you can think of, is how much you like the book.</center></p1><br />
-    <p id="favorite_books">My Favorite Books</p><br />
+    <p1>
+        <center>
+            I love reading books, anybook at all, even if the only book I have in hand is my <p11>school book!!</p11> I find it fun, because all authors have different ways of telling the stories, and I love that! I love how whatever author narrates, it keeps us on the edge, waiting for us to know more, and slowly before you even realize it, you’re completely drawn to the book, forgetting all your problems, because right now, you just want to know what happens next. There are so many different genres to books, and there’s always a perfect one to get lost in. The plot twists, page-turners, the back story, the style, the beginning, middle, the end, the plot, it’s all for us to get hooked on! It’s not just stories; it’s a part of life! Just think of this; sitting on a comfortable chair, the sun is shining on you, but just the right amount for light, you’re outside, in a balcony, and a small breeze touches your face, and it makes the temperature just the right amount. You open the book, you read the first page, and you need to know more, and go on, finishing a few chapters, still sitting without a care in the world, and you feel like time is standing still, still for you finish that book. But time is moving, moving as each page you flip. And you can see what the author is trying to tell you, and you’re there, just as a bystander. You travel to the places where the main character goes seeing the supporting characters, trying to qualify them as villains or friends. In the end, when you close the book, the only thing you can think of, is how much you like the book.</center>
+    </p1>
+    <p id="benefit"><br><br><br><iframe href=width=50 height=50 scr="https://www.healthline.com/health/benefits-of-reading-books"></iframe></p>
+    <p id="why"><br><br><br><iframe href=width=50 height=50 scr="https://www.theatlantic.com/education/archive/2019/09/love-reading-books-leisure-plea>sure/598315/"></iframe></p><br />
+    <p id="favorite_books">My Favorite Books</p><br /><iframe href=width="50px" height=50 scr="https://www.squishyminnie.com.au/book-review-percy-jackson-series-by-rick-riordan/"></iframe><br><br>
     <p3>Percy Jackson series are the series that I love the most. Here are the book reviews I made earlier.</p3><br /><br />
     <p4>1) The Lightning Thief<br /><br />Percy returns home for summer vacation, after which he and his mortal mother Sally Jackson travel to their cabin in Montauk to take their mind off things and to escape Percy's stepdad, Gabe Ugliano. However, the trip is cut short after a series of harrowing incidents, such as being attacked by the Minotaur, resulting in the death of his mother. Percy finds himself at Camp Half-Blood, a training camp for demigods like him. He discovers that he is a demigod, son of Poseidon, the Greek god of the sea. Percy also learns that his best friend, Grover Underwood, is actually a satyr, a forest spirit with a human torso, horns, and a goat’s lower body and that Zeus is accusing Percy of having stolen his master bolt, the most powerful weapon in the universe. To clear his name, save the world from another war between the Olympian gods, and maybe even save his mother, Percy sets out to retrieve the lightning bolt from Hades, who is suspected of being the real thief. Thus, Percy, Grover, and Annabeth Chase, a daughter of Athena, start on a journey to the underworld, facing numerous mythological monsters on the way. After confronting an innocent Hades, they learn that their friend Luke Castellan, son of Hermes, is the real thief who stole the Lightning Bolt (also called the Master Bolt) to allow Kronos, the defeated King of the Titans from the past, a chance to rise again and that Ares, the Greek god of war, helped cover up Luke's crime in order to instigate a war between Olympians.<br /><br /><br />
         2) The Sea of Monsters<br /><br />
@@ -53,10 +59,13 @@
         2. My teachers<br /><br />
         My teachers help me see the whole world just through a text book, they help me visualize and they have helped me speak, read, write, and most importantly, learn. They have explained to the gentlest times, and I for one, have taken them for granted many times. I hope that in the future, that I can help so many people find out what they want to be and help them change the world. <br /><br /><br />
         3. Authors<br /><br />
-        I respect all authors around the world, no matter the language they write in. I read so many books, and I have come to love it so much. It inspires me how they explain every single detail, but in their vision, and they take you to them, like a movie everything plays out in your mind, every single smell, the feels, all done by the writers little fingers<br />
+        I respect all authors around the world, no matter the language they write in. I read so many books, and I have come to love it so much. It inspires me how they explain every single detail, but in their vision, and they take you to them, like a movie everything plays out in your mind, every single smell, the feels, all done by the writers little fingers<br /><br><br>
+        <p6>Some of my most favorite authors are:- <br><br><br><br></p6><span><a href="https://blog.bookstellyouwhy.com/ten-facts-you-may-not-know-about-j-k-rowling" target="_blank" img scr="https://blog.bookstellyouwhy.com/hs-fs/hub/237126/file-1190710274-jpg/j.k._rowling.jpg?width=298&name=j.k._rowling.jpg"></a></span>
     </p5>
     <p id="contact">Contact</p><br />
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.021602144872!2d80.16713871482264!3d13.03429629081479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a526120eba99da9%3A0xed6309daa7c19cd9!2sBBC%20City%20Park%2C%20Gandhi%20St%2C%20Lakshmi%20Nagar%2C%20Porur%2C%20Chennai%2C%20Tamil%20Nadu%20600125!5e0!3m2!1sen!2sin!4v1619871285006!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     <p6>gmail: 130074suchitaarul.gbkm@gmail.com</p6>
+    <a href="mailto:130074suchitaarul.gbkm@gmail.com?Subject=Hello!" id="myname"><i class="fa fa-envelope">&nbsp;<span id="myname">130074suchitaarul.gbkm@gmail.com</span></i></a>
 </body>
 
 </html>
